--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,7 @@
-== README
+== Cohoot
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+= A search engine and network for human services
 
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+Cohoot is a search engine and professional social network for human services.  Search for human services..
 
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
